cmake_minimum_required(VERSION 3.10)
include_directories(include)
include_directories(include/libevent)
link_directories(lib/x86_64)
add_compile_options(-W -Wall -Wchar-subscripts -Wcomment -Wformat -Wimplicit)
add_compile_options( -Wmissing-braces -Wparentheses -Wswitch -Wunused -Wunused-parameter  -Wfloat-equal)
add_compile_options( -Wsign-compare -Wpointer-arith -Winline -Werror -rdynamic -g)
add_subdirectory(interface)
add_subdirectory(app/opcli)
add_subdirectory(app/oplog)
add_subdirectory(app/opbus)
add_subdirectory(app/test)
