AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=opserver
opserver_SOURCES= opserver.c
opserver_LDFLAGS=-L$(top_builddir)/src/opbox/.libs
opserver_LDFLAGS+=-L$(top_builddir)/src/base/.libs
opserver_LDFLAGS+=-L$(prefix)/lib
opserver_LDADD = -lopbox -liniparser -lbase -levent
opserver_CFLAGS = -I$(prefix)/include
opserver_CFLAGS += -W -Wall -Wchar-subscripts -Wcomment -Wformat -Wimplicit -Wmissing-braces -Wparentheses -Wswitch -Wno-unused-parameter  -Wfloat-equal -Wsign-compare -Wpointer-arith -Winline -Werror -rdynamic -g
opserverdir = $(prefix)/etc
opserver_DATA=opserver.conf