AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=opdpdk

opdpdk_SOURCES=opdpdk.c \
suricate/alert-debuglog.c \
suricate/alert-fastlog.c \
suricate/alert-prelude.c \
suricate/alert-syslog.c \
suricate/app-layer.c \
suricate/app-layer-dcerpc.c \
suricate/app-layer-dcerpc-udp.c \
suricate/app-layer-detect-proto.c \
suricate/app-layer-dnp3.c \
suricate/app-layer-dnp3-objects.c \
suricate/app-layer-enip.c \
suricate/app-layer-enip-common.c \
suricate/app-layer-events.c \
suricate/app-layer-expectation.c \
suricate/app-layer-ftp.c \
suricate/app-layer-htp-body.c \
suricate/app-layer-htp.c \
suricate/app-layer-htp-file.c \
suricate/app-layer-htp-libhtp.c \
suricate/app-layer-htp-mem.c \
suricate/app-layer-htp-xff.c \
suricate/app-layer-http2.c \
suricate/app-layer-ikev2.c \
suricate/app-layer-krb5.c \
suricate/app-layer-modbus.c \
suricate/app-layer-mqtt.c \
suricate/app-layer-nfs-tcp.c \
suricate/app-layer-nfs-udp.c \
suricate/app-layer-ntp.c \
suricate/app-layer-parser.c \
suricate/app-layer-protos.c \
suricate/app-layer-rdp.c \
suricate/app-layer-register.c \
suricate/app-layer-rfb.c \
suricate/app-layer-sip.c \
suricate/app-layer-smb.c \
suricate/app-layer-smtp.c \
suricate/app-layer-snmp.c \
suricate/app-layer-ssh.c \
suricate/app-layer-ssl.c \
suricate/app-layer-template.c \
suricate/app-layer-template-rust.c \
suricate/app-layer-tftp.c \
suricate/conf.c \
suricate/conf-yaml-loader.c \
suricate/counters.c \
suricate/datasets.c \
suricate/datasets-md5.c \
suricate/datasets-sha256.c \
suricate/datasets-string.c \
suricate/decode.c \
suricate/decode-chdlc.c \
suricate/decode-erspan.c \
suricate/decode-ethernet.c \
suricate/decode-events.c \
suricate/decode-geneve.c \
suricate/decode-gre.c \
suricate/decode-icmpv4.c \
suricate/decode-icmpv6.c \
suricate/decode-ipv4.c \
suricate/decode-ipv6.c \
suricate/decode-mpls.c \
suricate/decode-null.c \
suricate/decode-ppp.c \
suricate/decode-pppoe.c \
suricate/decode-raw.c \
suricate/decode-sctp.c \
suricate/decode-sll.c \
suricate/decode-tcp.c \
suricate/decode-template.c \
suricate/decode-teredo.c \
suricate/decode-udp.c \
suricate/decode-vlan.c \
suricate/decode-vntag.c \
suricate/decode-vxlan.c \
suricate/defrag.c \
suricate/defrag-config.c \
suricate/defrag-hash.c \
suricate/defrag-queue.c \
suricate/defrag-timeout.c \
suricate/detect-app-layer-event.c \
suricate/detect-app-layer-protocol.c \
suricate/detect-asn1.c \
suricate/detect-base64-data.c \
suricate/detect-base64-decode.c \
suricate/detect-bsize.c \
suricate/detect-bypass.c \
suricate/detect-byte.c \
suricate/detect-byte-extract.c \
suricate/detect-bytejump.c \
suricate/detect-bytemath.c \
suricate/detect-bytetest.c \
suricate/detect.c \
suricate/detect-cipservice.c \
suricate/detect-classtype.c \
suricate/detect-config.c \
suricate/detect-content.c \
suricate/detect-csum.c \
suricate/detect-datarep.c \
suricate/detect-dataset.c \
suricate/detect-dce-iface.c \
suricate/detect-dce-opnum.c \
suricate/detect-dce-stub-data.c \
suricate/detect-depth.c \
suricate/detect-detection-filter.c \
suricate/detect-distance.c \
suricate/detect-dnp3.c \
suricate/detect-dns-opcode.c \
suricate/detect-dns-query.c \
suricate/detect-dsize.c \
suricate/detect-engine-address.c \
suricate/detect-engine-address-ipv4.c \
suricate/detect-engine-address-ipv6.c \
suricate/detect-engine-alert.c \
suricate/detect-engine-analyzer.c \
suricate/detect-engine-build.c \
suricate/detect-engine.c \
suricate/detect-engine-content-inspection.c \
suricate/detect-engine-dcepayload.c \
suricate/detect-engine-dns.c \
suricate/detect-engine-enip.c \
suricate/detect-engine-event.c \
suricate/detect-engine-file.c \
suricate/detect-engine-iponly.c \
suricate/detect-engine-loader.c \
suricate/detect-engine-modbus.c \
suricate/detect-engine-mpm.c \
suricate/detect-engine-payload.c \
suricate/detect-engine-port.c \
suricate/detect-engine-prefilter.c \
suricate/detect-engine-prefilter-common.c \
suricate/detect-engine-profile.c \
suricate/detect-engine-proto.c \
suricate/detect-engine-register.c \
suricate/detect-engine-siggroup.c \
suricate/detect-engine-sigorder.c \
suricate/detect-engine-state.c \
suricate/detect-engine-tag.c \
suricate/detect-engine-threshold.c \
suricate/detect-engine-uint.c \
suricate/detect-fast-pattern.c \
suricate/detect-file-data.c \
suricate/detect-fileext.c \
suricate/detect-file-hash-common.c \
suricate/detect-filemagic.c \
suricate/detect-filemd5.c \
suricate/detect-filename.c \
suricate/detect-filesha1.c \
suricate/detect-filesha256.c \
suricate/detect-filesize.c \
suricate/detect-filestore.c \
suricate/detect-flowbits.c \
suricate/detect-flow.c \
suricate/detect-flowint.c \
suricate/detect-flowvar.c \
suricate/detect-fragbits.c \
suricate/detect-fragoffset.c \
suricate/detect-ftpbounce.c \
suricate/detect-ftpdata.c \
suricate/detect-geoip.c \
suricate/detect-gid.c \
suricate/detect-hostbits.c \
suricate/detect-http2.c \
suricate/detect-http-accept.c \
suricate/detect-http-accept-enc.c \
suricate/detect-http-accept-lang.c \
suricate/detect-http-client-body.c \
suricate/detect-http-connection.c \
suricate/detect-http-content-len.c \
suricate/detect-http-content-type.c \
suricate/detect-http-cookie.c \
suricate/detect-http-header.c \
suricate/detect-http-header-common.c \
suricate/detect-http-header-names.c \
suricate/detect-http-headers.c \
suricate/detect-http-host.c \
suricate/detect-http-location.c \
suricate/detect-http-method.c \
suricate/detect-http-protocol.c \
suricate/detect-http-raw-header.c \
suricate/detect-http-referer.c \
suricate/detect-http-request-line.c \
suricate/detect-http-response-line.c \
suricate/detect-http-server-body.c \
suricate/detect-http-server.c \
suricate/detect-http-start.c \
suricate/detect-http-stat-code.c \
suricate/detect-http-stat-msg.c \
suricate/detect-http-ua.c \
suricate/detect-http-uri.c \
suricate/detect-icmp-id.c \
suricate/detect-icmp-seq.c \
suricate/detect-icmpv4hdr.c \
suricate/detect-icmpv6hdr.c \
suricate/detect-icmpv6-mtu.c \
suricate/detect-icode.c \
suricate/detect-id.c \
suricate/detect-ipopts.c \
suricate/detect-ipproto.c \
suricate/detect-iprep.c \
suricate/detect-ipv4hdr.c \
suricate/detect-ipv6hdr.c \
suricate/detect-isdataat.c \
suricate/detect-itype.c \
suricate/detect-krb5-cname.c \
suricate/detect-krb5-errcode.c \
suricate/detect-krb5-msgtype.c \
suricate/detect-krb5-sname.c \
suricate/detect-l3proto.c \
suricate/detect-lua.c \
suricate/detect-lua-extensions.c \
suricate/detect-mark.c \
suricate/detect-metadata.c \
suricate/detect-modbus.c \
suricate/detect-mqtt-connack-sessionpresent.c \
suricate/detect-mqtt-connect-clientid.c \
suricate/detect-mqtt-connect-flags.c \
suricate/detect-mqtt-connect-password.c \
suricate/detect-mqtt-connect-username.c \
suricate/detect-mqtt-connect-willmessage.c \
suricate/detect-mqtt-connect-willtopic.c \
suricate/detect-mqtt-flags.c \
suricate/detect-mqtt-protocol-version.c \
suricate/detect-mqtt-publish-message.c \
suricate/detect-mqtt-publish-topic.c \
suricate/detect-mqtt-qos.c \
suricate/detect-mqtt-reason-code.c \
suricate/detect-mqtt-subscribe-topic.c \
suricate/detect-mqtt-type.c \
suricate/detect-mqtt-unsubscribe-topic.c \
suricate/detect-msg.c \
suricate/detect-nfs-procedure.c \
suricate/detect-nfs-version.c \
suricate/detect-noalert.c \
suricate/detect-nocase.c \
suricate/detect-offset.c \
suricate/detect-parse.c \
suricate/detect-pcre.c \
suricate/detect-pkt-data.c \
suricate/detect-pktvar.c \
suricate/detect-prefilter.c \
suricate/detect-priority.c \
suricate/detect-rawbytes.c \
suricate/detect-reference.c \
suricate/detect-replace.c \
suricate/detect-rev.c \
suricate/detect-rfb-name.c \
suricate/detect-rfb-secresult.c \
suricate/detect-rfb-sectype.c \
suricate/detect-rpc.c \
suricate/detect-sameip.c \
suricate/detect-sid.c \
suricate/detect-sip-method.c \
suricate/detect-sip-protocol.c \
suricate/detect-sip-request-line.c \
suricate/detect-sip-response-line.c \
suricate/detect-sip-stat-code.c \
suricate/detect-sip-stat-msg.c \
suricate/detect-sip-uri.c \
suricate/detect-smb-share.c \
suricate/detect-snmp-community.c \
suricate/detect-snmp-pdu_type.c \
suricate/detect-snmp-version.c \
suricate/detect-ssh-hassh.c \
suricate/detect-ssh-hassh-server.c \
suricate/detect-ssh-hassh-server-string.c \
suricate/detect-ssh-hassh-string.c \
suricate/detect-ssh-proto.c \
suricate/detect-ssh-proto-version.c \
suricate/detect-ssh-software.c \
suricate/detect-ssh-software-version.c \
suricate/detect-ssl-state.c \
suricate/detect-ssl-version.c \
suricate/detect-stream_size.c \
suricate/detect-tag.c \
suricate/detect-target.c \
suricate/detect-tcp-ack.c \
suricate/detect-tcp-flags.c \
suricate/detect-tcphdr.c \
suricate/detect-tcpmss.c \
suricate/detect-tcp-seq.c \
suricate/detect-tcp-window.c \
suricate/detect-template2.c \
suricate/detect-template-buffer.c \
suricate/detect-template.c \
suricate/detect-template-rust-buffer.c \
suricate/detect-threshold.c \
suricate/detect-tls.c \
suricate/detect-tls-cert-fingerprint.c \
suricate/detect-tls-cert-issuer.c \
suricate/detect-tls-certs.c \
suricate/detect-tls-cert-serial.c \
suricate/detect-tls-cert-subject.c \
suricate/detect-tls-cert-validity.c \
suricate/detect-tls-ja3-hash.c \
suricate/detect-tls-ja3s-hash.c \
suricate/detect-tls-ja3s-string.c \
suricate/detect-tls-ja3-string.c \
suricate/detect-tls-sni.c \
suricate/detect-tls-version.c \
suricate/detect-tos.c \
suricate/detect-transform-compress-whitespace.c \
suricate/detect-transform-dotprefix.c \
suricate/detect-transform-md5.c \
suricate/detect-transform-pcrexform.c \
suricate/detect-transform-sha1.c \
suricate/detect-transform-sha256.c \
suricate/detect-transform-strip-whitespace.c \
suricate/detect-transform-urldecode.c \
suricate/detect-ttl.c \
suricate/detect-udphdr.c \
suricate/detect-uricontent.c \
suricate/detect-urilen.c \
suricate/detect-within.c \
suricate/detect-xbits.c \
suricate/device-storage.c \
suricate/feature.c \
suricate/flow-bit.c \
suricate/flow-bypass.c \
suricate/flow.c \
suricate/flow-hash.c \
suricate/flow-manager.c \
suricate/flow-queue.c \
suricate/flow-spare-pool.c \
suricate/flow-storage.c \
suricate/flow-timeout.c \
suricate/flow-util.c \
suricate/flow-var.c \
suricate/flow-worker.c \
suricate/host-bit.c \
suricate/host.c \
suricate/host-queue.c \
suricate/host-storage.c \
suricate/host-timeout.c \
suricate/ippair-bit.c \
suricate/ippair.c \
suricate/ippair-queue.c \
suricate/ippair-storage.c \
suricate/ippair-timeout.c \
suricate/log-cf-common.c \
suricate/log-httplog.c \
suricate/log-pcap.c \
suricate/log-stats.c \
suricate/log-tcp-data.c \
suricate/log-tlslog.c \
suricate/log-tlsstore.c \
suricate/output.c \
suricate/output-file.c \
suricate/output-filedata.c \
suricate/output-filestore.c \
suricate/output-flow.c \
suricate/output-json-alert.c \
suricate/output-json-anomaly.c \
suricate/output-json.c \
suricate/output-json-common.c \
suricate/output-json-dcerpc.c \
suricate/output-json-dhcp.c \
suricate/output-json-dnp3.c \
suricate/output-json-dnp3-objects.c \
suricate/output-json-dns.c \
suricate/output-json-drop.c \
suricate/output-json-email-common.c \
suricate/output-json-file.c \
suricate/output-json-flow.c \
suricate/output-json-ftp.c \
suricate/output-json-http2.c \
suricate/output-json-http.c \
suricate/output-json-ikev2.c \
suricate/output-json-krb5.c \
suricate/output-json-metadata.c \
suricate/output-json-mqtt.c \
suricate/output-json-netflow.c \
suricate/output-json-nfs.c \
suricate/output-json-rdp.c \
suricate/output-json-rfb.c \
suricate/output-json-sip.c \
suricate/output-json-smb.c \
suricate/output-json-smtp.c \
suricate/output-json-snmp.c \
suricate/output-json-ssh.c \
suricate/output-json-stats.c \
suricate/output-json-template.c \
suricate/output-json-template-rust.c \
suricate/output-json-tftp.c \
suricate/output-json-tls.c \
suricate/output-lua.c \
suricate/output-packet.c \
suricate/output-stats.c \
suricate/output-streaming.c \
suricate/output-tx.c \
suricate/packet-queue.c \
suricate/pkt-var.c \
suricate/reputation.c \
suricate/respond-reject.c \
suricate/respond-reject-libnet11.c \
suricate/runmode-af-packet.c \
suricate/runmode-erf-dag.c \
suricate/runmode-erf-file.c \
suricate/runmode-ipfw.c \
suricate/runmode-napatech.c \
suricate/runmode-netmap.c \
suricate/runmode-nflog.c \
suricate/runmode-nfq.c \
suricate/runmode-pcap.c \
suricate/runmode-pcap-file.c \
suricate/runmode-pfring.c \
suricate/runmodes.c \
suricate/runmode-unittests.c \
suricate/runmode-unix-socket.c \
suricate/runmode-windivert.c \
suricate/rust-context.c \
suricate/source-af-packet.c \
suricate/source-erf-dag.c \
suricate/source-erf-file.c \
suricate/source-ipfw.c \
suricate/source-napatech.c \
suricate/source-netmap.c \
suricate/source-nflog.c \
suricate/source-nfq.c \
suricate/source-pcap.c \
suricate/source-pcap-file.c \
suricate/source-pcap-file-directory-helper.c \
suricate/source-pcap-file-helper.c \
suricate/source-pfring.c \
suricate/source-windivert.c \
suricate/stream.c \
suricate/stream-tcp.c \
suricate/stream-tcp-inline.c \
suricate/stream-tcp-list.c \
suricate/stream-tcp-reassemble.c \
suricate/stream-tcp-sack.c \
suricate/stream-tcp-util.c \
suricate/suricata.c \
suricate/suricate_main.c \
suricate/threads.c \
suricate/tm-modules.c \
suricate/tmqh-flow.c \
suricate/tmqh-packetpool.c \
suricate/tmqh-simple.c \
suricate/tm-queuehandlers.c \
suricate/tm-queues.c \
suricate/tm-threads.c \
suricate/unix-manager.c \
suricate/util-action.c \
suricate/util-affinity.c \
suricate/util-atomic.c \
suricate/util-base64.c \
suricate/util-bloomfilter.c \
suricate/util-bloomfilter-counting.c \
suricate/util-bpf.c \
suricate/util-buffer.c \
suricate/util-byte.c \
suricate/util-checksum.c \
suricate/util-cidr.c \
suricate/util-classification-config.c \
suricate/util-conf.c \
suricate/util-coredump-config.c \
suricate/util-cpu.c \
suricate/util-crypt.c \
suricate/util-daemon.c \
suricate/util-debug.c \
suricate/util-debug-filters.c \
suricate/util-decode-mime.c \
suricate/util-detect.c \
suricate/util-device.c \
suricate/util-ebpf.c \
suricate/util-enum.c \
suricate/util-error.c \
suricate/util-file.c \
suricate/util-file-decompression.c \
suricate/util-file-swf-decompression.c \
suricate/util-fix_checksum.c \
suricate/util-fmemopen.c \
suricate/util-hash.c \
suricate/util-hashlist.c \
suricate/util-hash-lookup3.c \
suricate/util-hash-string.c \
suricate/util-host-info.c \
suricate/util-host-os-info.c \
suricate/util-hyperscan.c \
suricate/util-ioctl.c \
suricate/util-ip.c \
suricate/util-ja3.c \
suricate/util-logopenfile.c \
suricate/util-log-redis.c \
suricate/util-lua.c \
suricate/util-lua-common.c \
suricate/util-lua-dnp3.c \
suricate/util-lua-dnp3-objects.c \
suricate/util-lua-dns.c \
suricate/util-lua-hassh.c \
suricate/util-lua-http.c \
suricate/util-lua-ja3.c \
suricate/util-luajit.c \
suricate/util-lua-smtp.c \
suricate/util-lua-ssh.c \
suricate/util-lua-tls.c \
suricate/util-macset.c \
suricate/util-magic.c \
suricate/util-mem.c \
suricate/util-memcmp.c \
suricate/util-memrchr.c \
suricate/util-misc.c \
suricate/util-mpm-ac-bs.c \
suricate/util-mpm-ac.c \
suricate/util-mpm-ac-ks.c \
suricate/util-mpm-ac-ks-small.c \
suricate/util-mpm.c \
suricate/util-mpm-hs.c \
suricate/util-napatech.c \
suricate/util-pages.c \
suricate/util-path.c \
suricate/util-pidfile.c \
suricate/util-plugin.c \
suricate/util-pool.c \
suricate/util-pool-thread.c \
suricate/util-prefilter.c \
suricate/util-print.c \
suricate/util-privs.c \
suricate/util-profiling.c \
suricate/util-profiling-keywords.c \
suricate/util-profiling-locks.c \
suricate/util-profiling-prefilter.c \
suricate/util-profiling-rulegroups.c \
suricate/util-profiling-rules.c \
suricate/util-proto-name.c \
suricate/util-radix-tree.c \
suricate/util-random.c \
suricate/util-reference-config.c \
suricate/util-rohash.c \
suricate/util-rule-vars.c \
suricate/util-runmodes.c \
suricate/util-running-modes.c \
suricate/util-signal.c \
suricate/util-spm-bm.c \
suricate/util-spm-bs2bm.c \
suricate/util-spm-bs.c \
suricate/util-spm.c \
suricate/util-spm-hs.c \
suricate/util-storage.c \
suricate/util-streaming-buffer.c \
suricate/util-strlcatu.c \
suricate/util-strlcpyu.c \
suricate/util-strptime.c \
suricate/util-syslog.c \
suricate/util-thash.c \
suricate/util-threshold-config.c \
suricate/util-time.c \
suricate/util-unittest.c \
suricate/util-unittest-helper.c \
suricate/util-var.c \
suricate/util-var-name.c \
suricate/win32-misc.c \
suricate/win32-service.c \
suricate/win32-syscall.c \
suricate/htp/bstr_builder.c \
suricate/htp/bstr.c \
suricate/htp/htp_base64.c \
suricate/htp/htp_config.c \
suricate/htp/htp_connection.c \
suricate/htp/htp_connection_parser.c \
suricate/htp/htp_content_handlers.c \
suricate/htp/htp_cookies.c \
suricate/htp/htp_decompressors.c \
suricate/htp/htp_hooks.c \
suricate/htp/htp_list.c \
suricate/htp/htp_multipart.c \
suricate/htp/htp_parsers.c \
suricate/htp/htp_php.c \
suricate/htp/htp_request_apache_2_2.c \
suricate/htp/htp_request.c \
suricate/htp/htp_request_generic.c \
suricate/htp/htp_request_parsers.c \
suricate/htp/htp_response.c \
suricate/htp/htp_response_generic.c \
suricate/htp/htp_table.c \
suricate/htp/htp_transaction.c \
suricate/htp/htp_transcoder.c \
suricate/htp/htp_urlencoded.c \
suricate/htp/htp_utf8_decoder.c \
suricate/htp/htp_util.c \
suricate/htp/strlcat.c \
suricate/htp/strlcpy.c \
suricate/htp/lzma/LzFind.c \
suricate/htp/lzma/LzmaDec.c

opdpdk_LDFLAGS =-L$(top_builddir)/src/base/.libs
opdpdk_LDFLAGS +=-L$(top_builddir)/src/opbox/.libs
opdpdk_LDFLAGS += -L$(prefix)/lib
opdpdk_includedir=$(prefix)/include/module/opdpdk
opdpdk_include_HEADERS =

opdpdk_CFLAGS  = -I$(top_srcdir)/src/ -I$(top_srcdir)/src/module/opdpdk/opproto -I$(top_srcdir)/src/module/opdpdk/suricate -I/usr/include/nss
opdpdk_CFLAGS += -I/usr/include/nspr
opdpdk_CFLAGS += -I$(top_srcdir)/src/module/opdpdk/suricate/dist

opdpdk_CFLAGS += -I$(prefix)/include
opdpdk_CFLAGS += -I$(prefix)/include/libpcap
opdpdk_CFLAGS += -g -DWITH_BROKER -W -Wall -Wchar-subscripts -Wcomment -Wformat -Wimplicit -Wmissing-braces \
	-Wno-error=unused-result -Wparentheses -Wswitch -Wno-unused-parameter  -Wfloat-equal -Wsign-compare -Wpointer-arith -Winline -Werror -Wno-pointer-arith -rdynamic -std=gnu99 -DLOCAL_STATE_DIR=\"$(prefix)/suricata\"

opdpdk_LDADD = -liniparser -lpcap -lpthread -lbase -lopbox -lpthread  -ldl -levent
opdpdk_LDADD += -llz4 -lmagic -lcap-ng -lpcap -ljansson -lyaml -lpcre  -lz -lpcap -lplds4 -lplc4 -lnspr4 -lnss3 -lnssutil3 -lsmime3 -lssl3 -lplds4 -lplc4 -lnspr4 /home/opserver/lib/libsuricata.a -ldl -lrt -lm

opdpdketcdir = $(prefix)/etc/suricata
opdpdketc_DATA=suricata.yaml

opdpdk2etcdir = $(prefix)/log/suricata/
opdpdk2etc_DATA=.log

opdpdk3etcdir = $(prefix)/suricata
opdpdk3etc_DATA=classification.config reference.config

opdpdk4etcdir = $(prefix)/suricata/rules
opdpdk4etc_DATA=suricata.rules

opdpdk5etcdir = $(prefix)/suricata/run/suricata
opdpdk5etc_DATA=.pid

